2009-01-09  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-cdm-cdm.cc: Install missing widening op.
	* OPERATORS/op-dm-dm.cc: Dtto.
	* OPERATORS/op-fcdm-fcdm.cc: Dtto.
	* OPERATORS/op-fdm-fdm.cc: Dtto.
	* OPERATORS/op-pm-pm.cc: Dtto.
	* OPERATORS/op-fpm-fpm.cc: Dtto.

2009-01-09  Jaroslav Hajek  <highegg@gmail.com>

	* ov-cell.cc (octave_cell::subsasgn): Put erased copy back after
	make_unique has been called.

2009-01-09  Kai Habel <kai.habel@gmx.de>

        * graphics.cc: Calculate normals for surface boundaries, use
        more neighboring points to calculate interior normals

2009-01-09  John W. Eaton  <jwe@octave.org>

	* input.cc (get_user_input (void)): Don't increment input_line_number.
	* lex.l (xunput): New function.  Use it in place of yyunput
	anywhere a newline character may be put back on the input stream.
	Increment input_line_number in all rules that consume newlines
	characters.
	(text_yyinput): Increment input_line_number
	(fixup_column_count): Increment input_line_number.
	(prep_for_function): Set input_line_number to 1, not 0.
	(reset_parser): Set input_line_number to current_command_number,
	not current_command_number-1.
	(flex_stream_reader::ungetc): Call xunput, not yyunput.
	* parse.y (input_line_number): Initialize to 1, not 0.
	(text_getc): Increment input_line_number correctly.
	(stdio_stream_reader::ungetc): Decrement input_line_number if
	putting back a newline character.
	(parse_fcn_file): Set input_line_number to 1, not 0.
	(eval_string): Unwind-protect input_line_number and
	current_input_column.

	* parse.y (make_statement): New function.
	(statement): Use it.
	(make_statement_list, append_statement_list): New functions.
	(simple_list1, list1): Use them.

2009-01-08  Jaroslav Hajek  <highegg@gmail.com>

	* ov-cell.cc (octave_cell::subsasgn): Erase duplicate lhs value 
	prior to assignment to avoid a redundant copy.

2008-12-26  Thorsten Meyer  <thorsten.meyier@gmx.de>
